# pathspell

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README  configure.ac  csv.h  pathspell.cfg  spells.xml
include/: Makefile.am  access.h  element.h  elementfilterlist.h  elementlist.h  elementsortlist.h  error.h  filter.h  generic.h  spell.h  spellelements.h  spelltoken.h  storage.h  strmanip.h  xml.h  xmlaccess.h  xmldecode.h  xmlelementlist.h  xmlspell.h
librpg/: Makefile.am  spellcomponents.cpp  spellduration.cpp  spellelements.cpp  spelllevel.cpp  spellresistance.cpp  spellsavingthrow.cpp  spellschool.cpp  spellspellresistance.cpp  strmanip.cpp  xml.cpp  xmldecode.cpp  xmldecoder.cpp  xmlspelldecode.cpp
librpg/include/: Makefile.am  element.h  elementsortlist.h  error.h  filter.h  spelltoken.h  xmlaccess.h
librpg/src/: Makefile.am  spellcomponents.cpp  spellduration.cpp  spellelements.cpp  spelllevel.cpp  spellschool.cpp  spellspellresistance.cpp  strmanip.cpp  xmlspelldecode.cpp
old/include/: error.h  spell.h  strmanip.h  xml.h
old/librpg/: Makefile.am  duration.cpp  savingthrow.cpp  school.cpp  xmldecoder.cpp  xmlencoder.cpp  xmlrefptr.cpp  xmlspelllist.cpp  xmlwrite.cpp
src/: Makefile.am  castingtime.cpp  character.cpp  character.h  components.cpp  csv.cpp  csv.h  duration.cpp  error.h  filter.cpp  filter.h  gtkwindow.cpp  gtkwindow.h  interactive.cpp  interactive.h  level.cpp  options.cpp  options.h  output.cpp  output.h  pathspell.cpp  pf.cpp  pf.h  savingthrow.cpp  school.cpp  spell.cpp  spell.h  spell_add_window.xml  spellresistance.cpp  spells.cpp  spells.h  spellschool.cpp  spellschool.h  strmanip.cpp  strmanip.h  target.cpp  token.h  util.cpp  util.h  xml.cpp  (+4 more)
