lib_LTLIBRARIES = librpg.la
librpg_la_SOURCES = xml.h xmldecoder.cpp xmlrefptr.cpp xmlspelllist.cpp \
										spell.h components.cpp duration.cpp level.cpp savingthrow.cpp school.cpp spell.cpp spellresistance.cpp target.cpp\
										error.h \
										strmanip.h strmanip.cpp
librpg_la_CPPFLAGS = -I$(top_srcdir)/include \
                     -I$(top_srcdir)/common
