lib_LTLIBRARIES = librpg.la
librpg_la_SOURCES = spellcomponents.cpp spellduration.cpp spelllevel.cpp \
                    spellsavingthrow.cpp spellschool.cpp \
                    spellspellresistance.cpp \
                    spellelements.cpp \
                    xmlspelldecode.cpp \
                    strmanip.cpp
librpg_la_CXXFLAGS = -Wall -Wextra -Werror -std=c++0x
librpg_la_CPPFLAGS = -I$(top_srcdir)/include
