bin_PROGRAMS = pathspell
pathspell_SOURCES = pathspell.cpp \
xml.h xmldecoder.cpp xmlrefptr.cpp xmlspelllist.cpp \
spell.h components.cpp duration.cpp level.cpp savingthrow.cpp school.cpp spell.cpp spellresistance.cpp target.cpp\
gtkwindow.h gtkwindow.cpp \
error.h \
strmanip.h strmanip.cpp
pathspell_CXXFLAGS = -Wall -Wextra -ggdb -std=gnu++0x -fpermissive
pathspell_CPPFLAGS = $(GTKMM_CFLAGS) 
pathspell_LDADD = $(GTKMM_LIBS)
