lib_LTLIBRARIES = librpg.la
librpg_la_SOURCES = spellcomponents.cpp spellduration.cpp spelllevel.cpp \
                    spellsavingthrow.cpp spellschool.cpp \
                    spellspellresistance.cpp \
                    spellelements.cpp \
                    storage.cpp \
                    xml.cpp xmldecode.cpp \
                    xmlspelldecode.cpp \
                    strmanip.cpp
librpg_la_CXXFLAGS = -Wall -Wextra -std=c++11
librpg_la_CPPFLAGS = -I../include
librpg_la_DESTDIR = ..
